writing test and evolve worker service